--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(c_decompressor c_decompressor.c)
-target_link_libraries(c_decompressor lazrs minilas)
+target_link_libraries(c_decompressor PRIVATE laz-rs-c minilas)
+
 
 add_executable(cpp_decompressor cpp_decompressor.cpp)
 target_link_libraries(cpp_decompressor lazrs_cpp minilas)
@@ -7,9 +8,9 @@ target_link_libraries(cpp_decompressor lazrs_cpp minilas)
 add_executable(cpp_pardecompressor cpp_pardecompressor.cpp)
 target_link_libraries(cpp_pardecompressor lazrs_cpp minilas)
 
-if (WIN32)
-    add_custom_command(
-            TARGET c_decompressor POST_BUILD
-            COMMAND "${CMAKE_COMMAND}" -E copy "${CARGO_LIB_DLL}" "$<TARGET_FILE_DIR:c_decompressor>"
-    )
-endif ()
+#if (WIN32)
+#    add_custom_command(
+#            TARGET c_decompressor POST_BUILD
+#            COMMAND "${CMAKE_COMMAND}" -E copy "${CARGO_LIB_DLL}" "$<TARGET_FILE_DIR:c_decompressor>"
+#    )
+#endif ()
